@@ -451,3 +451,5 @@
 2004-03-20      3.0b2-unreleased
                            Fall back to 3DES as Encrypt-Key cipher if we don't
                              have IDEA. - Laurent Fousse <laurent@komite.net>
+                           Also sort mail into the various mboxes if autoreply
+                             is not set.
